--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
@@ -88,7 +88,7 @@
         </p>
         <p>
             Seizure activity indicators (aura, behaviors or
-            manifestations of oncoming seizure activity):
+            manifestations of oncoming seizure activity): <br />
             {{ form.seizure_indicators }}
             <span class="error_message">
                 {{ form.seizure_indicators.errors.as_text }}
