[Re #76] Implemented all the stuff.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/admin.html
@@ -21,4 +21,9 @@
                 Create New User
             </a>
         </li>
+        <li>
+            <a href="{% url 'report-select-user' %}">
+                User Accounts
+            </a>
+        </li>
 {% endblock %}
