--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/create_user.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/create_user.html
@@ -13,6 +13,9 @@
              required.
         </p>
         <p>
+            {{ form.is_superuser }}
+        </p>
+        <p>
             <span style="color: red">*</span>Create username: {{ form.username }}
             <span class="error_text">
                 {{ form.username.errors.as_text }}
