[Re #76] More stuff.

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/user.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/user.html
@@ -14,7 +14,7 @@
     {% endif %}
     {% if user %}
         <p>
-            <a href="{% url 'user-delete' user.id %}">Delete User</a>
+            {{ user.username }} ({{ user.email }})
         </p>
     {% endif %}
 {% endblock %}
