[Re #76] Cleaned up some formating/text issues related to account admin templates

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/create_user.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/create_user.html
@@ -13,13 +13,13 @@
              required.
         </p>
         <p>
-            <span style="color: red">*</span>Create username: {{ form.username }}
+            <span style="color: red">*</span>New username: {{ form.username }}
             <span class="error_text">
                 {{ form.username.errors.as_text }}
             </span>
         </p>
         <p>
-            <span style="color: red">*</span>Create password: {{ form.password }}
+            <span style="color: red">*</span>New password: {{ form.password }}
             <span class="error_text">
                 {{ form.password.errors.as_text }}
             </span>
