[Re #77] Tweaked logout button location

--- a/cb_info_db/cbar_db/templates/cbar_db/template.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/template.html
@@ -5,6 +5,7 @@
     <style>
         #logout-button{
             text-align: right;
+            padding-top: 2em;
         }
     </style>
     <title>C-Bar Information Database</title>
