--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -1,7 +1,7 @@
 {% extends "cbar_db/template.html" %}
 {% block header %}
     {% load staticfiles %}
-    <script src="{% static "cbar_db/js/jquery-1.12.3.js" %}" type="text/javascript"></script>
+    <script src="{% static "cbar_db/js/jquery-1.12.3.min.js" %}" type="text/javascript"></script>
     <script src="{% static "cbar_db/js/intake_assessment.js" %}" type="text/javascript"></script>
     <style>
         ul, li {
