[Re #77] Fixed header sizes on private forms index

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/private.html
@@ -6,7 +6,9 @@
          form.
     </p>
 
-    <h2 style="text-align: left">Rider Intake Assessment</h2>
+    <h2>Evaluation Forms</h2>
+
+    <h3 style="text-align: left">Rider Intake Assessment</h3>
     <ul>
         <li>
             Click <a href="{% url 'private-form-intake-assessment' %}">here</a>
@@ -14,7 +16,7 @@
          </li>
     </ul>
 
-    <h2 style="text-align:left">Observation Evaluation</h2>
+    <h3 style="text-align:left">Observation Evaluation</h3>
     <ul>
         {% for participant in participants %}
             <li>
